--- a/board_form.css
+++ b/board_form.css
@@ -6,12 +6,12 @@ body{
     background: black;
     margin:-5;
     height: 1500px;
-    width: 1480px;
+    width: 100%;
 }
 .back_img{
     background-image: url(img/back_intro.jpg);
     background-color: black;
-    height: 900px;
+    height: 100%;
     background-size: 100%;
 }
 .blank{
