--- a/board_list.css
+++ b/board_list.css
@@ -6,12 +6,12 @@ body{
     background: black;
     margin:-5;
     height: 1500px;
-    width: 1480px;
+    width: 100%;
 }
 .back_img{
     background-image: url(img/back_intro.jpg);
     background-color: black;
-    height: 900px;
+    height: 100%;
     background-size: 100%;
 }
 .blank{
@@ -20,7 +20,7 @@ body{
 }
 .community{
     width: 80%;
-    height: 100%;
+    height: 70%;
     background: rgba(184, 184, 184, 0.75);
     margin:0 auto;
     border-radius: 5px;
