--- a/board.css
+++ b/board.css
@@ -1,16 +1,29 @@
 
+body{
+    margin:0;
+}
 .parent{
-    background-color: black;
+    background: black;
     margin:-5;
     height: 1500px;
     width: 100%;
 }
-.back_img {
+.back_img{
     background-image: url(img/back_intro.jpg);
-    /* background-color: white; */
+    background-color: black;
     height: 100%;
     background-size: 100%;
-    
+}
+.blank{
+    height: 72px;
+    width: 100%;
+}
+.community{
+    width: 80%;
+    height: 60%;
+    background: rgba(184, 184, 184, 0.75);
+    margin:0 auto;
+    border-radius: 5px;
 }
 /* .header{
     position: fixed;
@@ -22,16 +35,5 @@
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-.community{
-    height: 48%;
-    width: 37%;
-    background: rgba(184, 184, 184, 0.916);
-    border-radius: 5px;
-}
-.blank_hori{
-    width:100px;
-    height:10px;
+    flex-direction: column;
 }
