--- a/book_list.css
+++ b/book_list.css
@@ -8,6 +8,10 @@ body{
     height: 1500px;
     width: 100%;
 }
+img{
+    width: 80px;
+    height: 120px;
+}
 .back_img{
     background-image: url(img/back_intro.jpg);
     background-color: black;
@@ -20,10 +24,12 @@ body{
 }
 .community{
     width: 80%;
-    height: 100%;
+    height: 70%;
     background: rgba(184, 184, 184, 0.75);
     margin:0 auto;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
 }
 /* .header{
     position: fixed;
