--- a/login.css
+++ b/login.css
@@ -25,11 +25,34 @@
     display: flex;
     justify-content: center;
 }
-a{
+/* a{
     font-size: 30px;
-}
+} */
 .login{
     display: flex;
     
     justify-content: center;
 }
+.home_key > a{
+    font-size: 30px;
+}
+a.button {
+    display: block;
+    position: relative;
+    float: left;
+    width: 120px;
+    padding: 0;
+    margin: 10px 20px 10px 0;
+    font-weight: 600;
+    text-align: center;
+    line-height: 30px;
+    color: #FFF;
+    border-radius: 5px;
+    transition: all 0.2s ;
+  }
+.btnPurple {
+    background: #160585;
+  }
+.btnFade.btnPurple:hover {
+    background: #180450;
+  }
